efficientNet V2 train started.

--- a/notebooks/exploration_dataset.ipynb
+++ b/notebooks/exploration_dataset.ipynb
@@ -39,8 +39,8 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_hub as hub\n",
+    "#import tensorflow as tf\n",
+    "#import tensorflow_hub as hub\n",
     "\n",
     "import PIL\n",
     "from PIL import Image, ImageDraw\n",
@@ -51,9 +51,9 @@
     "\n",
     "from IPython.display import display, Markdown, HTML\n",
     "\n",
-    "print(\"TF version:\", tf.__version__)\n",
-    "print(\"Hub version:\", hub.__version__)\n",
-    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
+    "#print(\"TF version:\", tf.__version__)\n",
+    "#print(\"Hub version:\", hub.__version__)\n",
+    "#print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
    ]
   },
   {
